was added/changed: - transfer start asynq server to config - set up with redis for caching - Changed architecture of controller recording via repositories. Improved architecture for users. Will remain for authorization and continue to write correctly and scalably. -  create folder repository - create folder service - SetCache, GetCache, DeleteCache functions was written - make algorithm for getting hashing token for confirming email (need to do this route) - make pattern for sending token to user email
